static/toc-styles.css
/* -------- SCROLLING TOC -------- */
/* This hack is needed to temporary disable the predefined layout style */
d-article {
    contain: none;
}


/* Sidebar Navigation */
#TOC {
  opacity: 1;
  position: fixed;
  left: calc(2%);
  /* top: calc(5.5%); */
  /* width: 20%; */
  max-width: 200px;
  max-height: 85%;
  overflow-y: auto;
  background: white;            /* Optional, remove to enable the blur filter (just for fun). */
  backdrop-filter: blur(10px);  /* Optional, wouldn't not work with Firefox browser. */
  padding: 10px;                /* Optional */
  /* border-right: 1px solid rgba(0, 0, 0, 0.1); */
  border: 1px solid rgba(0, 0, 0, 0.1);
  /* border-radius: 1px; */
  transition: all 0.5s;
  z-index: 999;                 /* Optional */
  }

/* Hide the TOC when resized to mobile or tablet:  480px, 768px, 900px */
@media screen and (max-width: 1000px) {
#TOC {
    position: relative;
    left: 0;
    top: 0;
    max-width: none;
    max-height: none;
    overflow-y: auto;
    border: none;
    background: none; }
  }
  
@media (min-width: 768px) and (max-width: 1000px) {
  .base-grid, distill-header, d-title, d-abstract, d-article, d-appendix, distill-appendix, d-byline, d-footnote-list, d-citation-list, distill-footer{
    grid-template-columns: [screen-start] 1fr [page-start kicker-start middle-start text-start] repeat(8, 1fr) [ kicker-end text-end gutter-start] 1rem [middle-end] 1rem [page-end gutter-end] 0fr [screen-end];
  }  
}
  
@media (min-width: 1000px) {
  .base-grid, distill-header, d-title, d-abstract, d-article, d-appendix, distill-appendix, d-byline, d-footnote-list, d-citation-list, distill-footer{
    grid-template-columns: [screen-start] 0fr [page-start kicker-start] 220px [middle-start] 1rem [text-start kicker-end] repeat(8, 1fr) [text-end gutter-start] 1rem [middle-end] 0fr [page-end gutter-end] 0fr [screen-end];
  }
}

